--- a/app/src/main/res/layout/customer_fragment_fav.xml
+++ b/app/src/main/res/layout/customer_fragment_fav.xml
@@ -66,6 +66,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:id="@+id/bookATable"
             android:padding="15dp"
             android:orientation="horizontal"
             android:layout_height="match_parent">
@@ -126,6 +127,7 @@
             <Button
                 android:layout_width="0dp"
                 android:text="Order On Call"
+                android:id="@+id/order_on_call"
                 android:layout_weight="2"
                 android:textSize="20sp"
                 android:textAllCaps="false"
