--- a/app/src/main/res/layout/customer_fragment_profile.xml
+++ b/app/src/main/res/layout/customer_fragment_profile.xml
@@ -37,6 +37,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/cus_name"
         android:layout_marginTop="25dp"
         android:layout_marginStart="10dp"
         android:textSize="25sp"
@@ -48,6 +49,7 @@
     <TextView
         android:layout_marginTop="25dp"
         android:layout_marginStart="10dp"
+        android:id="@+id/cus_email"
         android:textSize="25sp"
         android:layout_width="wrap_content"
         android:text="email"
@@ -56,6 +58,7 @@
 
     <TextView
         android:layout_marginTop="25dp"
+        android:id="@+id/cus_address"
         android:layout_marginStart="10dp"
         android:textSize="25sp"
         android:layout_width="wrap_content"
@@ -69,6 +72,7 @@
         android:textSize="25sp"
         android:layout_width="wrap_content"
         android:text="Number"
+        android:id="@+id/cus_number"
         android:layout_marginBottom="5dp"
         android:layout_height="wrap_content"/>
 
@@ -77,6 +81,7 @@
         android:layout_marginStart="10dp"
         android:layout_width="wrap_content"
         android:text="Change Password"
+        android:id="@+id/cus_change_password"
         android:textSize="15sp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
@@ -85,6 +90,7 @@
         android:layout_height="wrap_content"/>
 
     <Button
+        android:id="@+id/cus_logout_btn"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:layout_width="130dp"
