--- a/app/src/main/res/layout/layout_for_custom_dialog_placeorder.xml
+++ b/app/src/main/res/layout/layout_for_custom_dialog_placeorder.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
-    android:padding="50dp"
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="30dp"
+    android:layout_width="wrap_content"
+    xmlns:card_view="http://schemas.android.com/tools"
+    app:cardPreventCornerOverlap="false"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="30dp">
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:padding="20dp"
     android:background="@color/background_color"
     android:orientation="vertical"
     android:layout_height="wrap_content">
@@ -57,13 +66,14 @@
             android:clickable="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_toEndOf="@id/chooseImageView"
-            android:src="@drawable/ic_image"
+            android:src="@drawable/ic_baseline_layers_clear_24"
             android:layout_height="50dp"/>
 
     </RelativeLayout>
 
     <Button
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_width="wrap_content"
         android:text="Place Order"
         android:theme="@style/buttonYellow"
@@ -78,3 +88,5 @@
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
+
+</androidx.cardview.widget.CardView>
